# aspect

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  theme.rs  window.rs
src/components/: action.rs  app.rs  image_manager.rs  mod.rs  overlay.rs  viewer.rs
src/components/overlay/: list_item.rs  mod.rs  rating.rs
src/data/: file.rs  file_list.rs  filter.rs  mod.rs
src/data/persist/: mod.rs
src/data/persist/migrations/: 20190112025101_create-file-table.sql  mod.rs
src/res/: mod.rs
src/support/: conrod.rs  mod.rs  path.rs
src/systems/: event_system.rs  events.rs  image_system.rs  mod.rs
templates/: widget.rs
